TypeChecking/test_cases/bad/undef-param-type.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class Bad inherits Main {
  foo(x : Fish) : Int { 5 } ;
} ;
